# argss

./: README.md  pyproject.toml
argss/: __init__.py  argument.py  cli.py  utils.py
